--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    #botonSaludar {
+        padding: 5px;
+        background-color: green;
+    }
+</style>
 <body>
-    
-    <button onclick="alert('Hola!')">Saludar</button>
-    
+    <div id="botonSaludar">
+        <button onclick="alert('Hola!')">Saludar</button>
+    </div>
+
+    <script src="eventos.js"></script>
+
 </body>
+
 </html>
