--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </style>
 <body>
     <div id="botonSaludar">
-        <button onclick="alert('Hola!')">Saludar</button>
+        <button>Saludar</button>
     </div>
 
     <script src="eventos.js"></script>
